z-index woes (solved)

--- a/css/main.css
+++ b/css/main.css
@@ -299,6 +299,7 @@ a:hover{
           transform: translate(0px, 0px);
    border-radius: 25px;
    position: relative;
+   z-index: 4;
 
 }
 
@@ -319,7 +320,7 @@ a:hover{
 	height: 100%;
 /*	margin-top: 40px;*/
 	position: absolute;
-	z-index: 10;
+	z-index: 3;
 	left: 0px;
 	opacity: 0;
 }
